# uspto_fpd_mcp

./: .gitignore  .pre-commit-config.yaml  .prompt_injections.baseline  .secrets.baseline  CUSTOMIZATION.md  INSTALL.md  PROMPTS.md  README.md  SECURITY_GUIDELINES.md  SECURITY_SCANNING.md  USAGE_EXAMPLES.md  field_configs.yaml  pyproject.toml
.github/workflows/: security-scan.yaml
.security/: check_prompt_injections.py  fpd_prompt_injection_detector.py  prompt_injection_detector.py
deploy/: Validation-Helpers.sh  linux_setup.sh  merge_fpd_to_claude_json.py  quick_merge_claude_config.sh  windows_setup.ps1
reference/: FinalPetitionDecisions_swagger.yaml  README.md
src/fpd_mcp/: __main__.py  main.py  secure_storage.py  shared_secure_storage.py
src/fpd_mcp/api/: field_constants.py  fpd_client.py
src/fpd_mcp/config/: __init__.py  api_constants.py  api_key_validation.py  feature_flags.py  field_manager.py  log_config.py  retention_policy.py  settings.py  storage_paths.py  tool_reflections.py
src/fpd_mcp/monitoring/: __init__.py  metrics.py
src/fpd_mcp/prompts/: __init__.py  art_unit_quality_assessment.py  company_petition_risk_assessment_pfw.py  complete_portfolio_due_diligence_pfw_ptab.py  examiner_dispute_citation_analysis.py  litigation_research_setup_pfw.py  patent_vulnerability_assessment_ptab.py  petition_document_research_package.py  petition_quality_with_citation_intelligence.py  prosecution_quality_correlation_pfw.py  (+1 more)
tests/: README.md  test_basic.py  test_integration.py  test_tiered_convenience_params.py  test_unified_storage.py
(+21 files in other folders)
