[project]
name = "fpd-mcp"
version = "1.0.0"
description = "MCP server for USPTO Final Petition Decisions data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "John Walkoe" }
]

dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "click>=8.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyPDF2>=3.0.0",
    "requests>=2.31.0",
    "detect-secrets>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[project.scripts]
fpd-mcp = "fpd_mcp.main:run_server"
fpd-proxy = "fpd_mcp.proxy.server:run_proxy_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
